<resources>
    <string name="app_name">Tirumala Traders</string>

    <string name="tirumala_traders">Tirumala Traders</string>

    <!--login&Signup-->
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="firm_name">Firm Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="district">District</string>
    <string name="mandal">Mandal</string>
    <string name="village">Village</string>
    <string name="address">Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">Click Here</string>
    <string name="dont_account">Don\'t have an account?</string>
    <string name="signup_here">Signup Here</string>
    <string name="signup">Signup</string>


    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--forgot password-->
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="back_to">Back to</string>


    <!--Buttons-->
    <string name="login">Login</string>
    <string name="update">Update</string>

    <!-- nav drawer items -->
    <string-array name="drawerItems">
        <item>Home</item>
        <item>My Cart</item>
        <item>My Orders</item>
        <item>Logout</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="review_order">Review Order</string>
    <string name="progress_dialog_text">Please Wait...</string>
    <string name="network_error">Network Error</string>
    <string name="no_internet">Please Check Your Internet Connection</string>
    <string name="ok">OK</string>

    <!--home-->
    <string name="shop_by_category">Shop By Category</string>
    <string name="add">Add</string>

    <!--products-->
    <string name="goto_cart">Go To Cart</string>
    <string name="check_out">CheckOut</string>
    <string name="total_rs">Total: Rs</string>
    <string name="continnue">CONTINUE</string>
    <string name="thank_you">Thank You</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="order_placed">Order Successfully Placed</string>
</resources>
