<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_error"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>

    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/orange"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_10"/>

</LinearLayout>