<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools"
    android:background="@color/orange">

    <RelativeLayout
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_centerInParent="true">

        <android.support.v7.widget.CardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="0dp"
            card_view:cardUseCompatPadding="false" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="24dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_tlNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColorHint="@android:color/black">

                        <EditText
                            android:id="@+id/login_EtNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="10"
                            android:hint="@string/mobile_number"
                            android:textSize="@dimen/sp_16"
                            android:imeOptions="actionNext"/>

                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_tlPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="false"
                        style="@style/AppTheme"
                        android:textColorHint="@android:color/black">

                        <EditText
                            android:id="@+id/login_EtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textSize="@dimen/sp_16"
                            android:imeOptions="actionDone"/>
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="@dimen/dp_110"
                    android:layout_height="@dimen/dp_40"
                    android:background="@drawable/background_button_shadow"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:paddingBottom="@dimen/dp_5"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_marginTop="@dimen/dp_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textSize="@dimen/sp_12"
                        android:layout_marginTop="@dimen/dp_3"
                        android:textColor="@android:color/black"/>

                    <LinearLayout
                        android:id="@+id/login_forgot_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/dp_5">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/click_here"
                            android:textSize="@dimen/sp_16"
                            android:textColor="@color/orange" />
                        <View
                            android:layout_width="@dimen/dp_70"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/orange"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img"
            app:civ_border_width="10dp"
            app:civ_border_color="@color/dark_orange"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_below="@+id/card_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_account"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14"/>
        <LinearLayout
            android:id="@+id/login_signup_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_here"
                android:textSize="@dimen/sp_16"
                android:textColor="@android:color/white"/>
            <View
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_1"
                android:background="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
