<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_thank_you"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ttapp.activities.ThankYou">

    <RelativeLayout
        android:id="@+id/thankyou_appbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="@dimen/dp_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/sp_18"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/thankyou_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/light_black">
        <TextView
            android:id="@+id/checkout_total_rs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_centerInParent="true"
            android:text="@string/continue_shopping"
            android:textSize="@dimen/sp_16"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/thankyou_appbar"
        android:layout_above="@+id/thankyou_bottom_layout">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/dp_10"
            app:cardCornerRadius="@dimen/dp_5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:layout_toRightOf="@+id/checkout_total_rs"
                android:text="@string/order_placed"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/sp_16"
                android:textColor="@android:color/black"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

</RelativeLayout>
