<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_check_out"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ttapp.activities.CheckOut">

    <RelativeLayout
        android:id="@+id/checkout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="@dimen/dp_5">

        <ImageView
            android:id="@+id/checkout_back_icon"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:padding="4dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@mipmap/ic_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_out"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/sp_18"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/checkout_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/light_black">
        <TextView
            android:id="@+id/checkout_total_rs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:text="@string/total_rs"
            android:textSize="@dimen/sp_16"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/checkout_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/checkout_total_rs"
            android:text="1000"
            android:textSize="@dimen/sp_16"
            android:textColor="@android:color/white"/>
        <ImageView
            android:id="@+id/checkout_right_arrow"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:padding="4dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/ic_forward"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/checkout_right_arrow"
            android:text="@string/continnue"
            android:textSize="@dimen/sp_14"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/checkout_app_bar"
        android:layout_above="@+id/checkout_bottom_layout">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_20"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/dp_10"
            app:cardCornerRadius="@dimen/dp_5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_toRightOf="@+id/checkout_total_rs"
                android:text="1000"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:textColor="@android:color/black"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

</RelativeLayout>
